--- a/res/layout-large/startup_screen.xml
+++ b/res/layout-large/startup_screen.xml
@@ -1,50 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/info">
 
-    <ImageView
-        android:id="@+id/background_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#000000"
-        android:alpha="0.75"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:contentDescription="@string/background_view_img"
-        android:scaleType="fitCenter"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" >
+        
+        <ImageButton
+	        android:id="@+id/startButton"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:background="@null"
+	        android:src="@drawable/bt_comecar"
+	        android:layout_marginBottom="20dp" />
+        
+        <ImageButton
+	        android:id="@+id/downloadButton"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:background="@null"
+	        android:src="@drawable/bt_baixar" />
+        
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    </LinearLayout>
 
-         <TextView
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/description_text"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="@string/startup_description"
-             android:textSize="36dp"
-             android:layout_gravity="center_horizontal"
-             android:textColor="#EDECEC"/>
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/description_text"
-            android:alpha="0.5"
-            android:background="#FFFFFF"/>
-
-        <ImageView
-            android:id="@+id/start_button"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/divider"
-            android:layout_alignRight="@+id/description_text"
-            android:contentDescription="@string/startup_button"
-            android:src="@drawable/start_button_selector"/>
-
-    </RelativeLayout>
-</FrameLayout>
+</RelativeLayout>
