--- a/res/layout-xlarge/startup_screen.xml
+++ b/res/layout-xlarge/startup_screen.xml
@@ -12,20 +12,22 @@
         
         <ImageButton
 	        android:id="@+id/startButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_width="200dp"
+	        android:layout_height="60dp"
 	        android:layout_weight="1"
 	        android:background="@null"
 	        android:src="@drawable/bt_comecar"
-	        android:layout_marginBottom="40dp" />
+	        android:layout_marginBottom="40dp"
+	        android:scaleType="fitCenter" />
         
         <ImageButton
 	        android:id="@+id/downloadButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_width="200dp"
+	        android:layout_height="60dp"
 	        android:layout_weight="1"
 	        android:background="@null"
-	        android:src="@drawable/bt_baixar" />
+	        android:src="@drawable/bt_baixar"
+	        android:scaleType="fitCenter" />
         
 
     </LinearLayout>
