--- a/res/layout/startup_screen.xml
+++ b/res/layout/startup_screen.xml
@@ -11,20 +11,22 @@
         android:layout_alignParentBottom="true" >
         
         <ImageButton
-	        android:id="@+id/startButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:background="@null"
-	        android:src="@drawable/btn_comecar_states"
-	        android:layout_marginBottom="20dp" />
+            android:id="@+id/startButton"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/btn_comecar_states" />
         
         <ImageButton
 	        android:id="@+id/downloadButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
+	        android:layout_width="80dp"
+	        android:layout_height="30dp"
 	        android:layout_weight="1"
 	        android:background="@null"
+	        android:scaleType="fitCenter"
 	        android:src="@drawable/btn_download_states" />
         
 
