--- a/res/layout-small/startup_screen.xml
+++ b/res/layout-small/startup_screen.xml
@@ -11,22 +11,23 @@
         android:layout_alignParentBottom="true" >
         
         <ImageButton
-	        android:id="@+id/startButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:background="@null"
-	        android:src="@drawable/bt_comecar"
-	        android:layout_marginBottom="20dp" />
+            android:id="@+id/startButton"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bt_comecar" />
         
         <ImageButton
-	        android:id="@+id/downloadButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:background="@null"
-	        android:src="@drawable/bt_baixar" />
-        
+            android:id="@+id/downloadButton"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:src="@drawable/bt_baixar" />
 
     </LinearLayout>
 
